--- a/apps/web/src/components/modules/HighlightsModule.astro
+++ b/apps/web/src/components/modules/HighlightsModule.astro
@@ -1,6 +1,9 @@
 ---
+import BlurShadow from "@/components/astro/BlurShadow.astro";
 import Icon from "@/components/astro/Icon.astro";
+import Link from "@/components/astro/Link.astro";
 import SanityImage from "@/components/astro/SanityImage.astro";
+import { MagneticHover } from "@/components/solid/magnetic-hover";
 import LandingLayout from "@/layouts/LandingLayout.astro";
 import type { PageModuleProps } from "@/scripts/queries";
 
@@ -17,25 +20,39 @@ if (!highlights?.length) return null;
 	</h3>
 	{
 		highlights.map((highlight) => (
-			<figure class="col-span-4 pb-[1rem] md:col-span-6">
-				<div class="rounded-lg pb-[1.25rem]">
-					{highlight.image && (
-						<SanityImage
-							{...highlight.image}
-							alt={highlight.title ?? ""}
-							width={1200}
-							class="h-auto w-full rounded-lg"
-							sizes="(min-width: 1280px) 1200px, 100vw"
-						/>
-					)}
-				</div>
-				<figcaption class="headline-card hover:text-novo-blue flex items-start gap-[0.5rem] hover:underline">
-					<span class="flex h-[2.125rem] w-[2.125rem]">
-						<Icon icon="arrow_outward" />
-					</span>
-					{highlight.title}
-				</figcaption>
-			</figure>
+			<MagneticHover
+				client:load
+				class="col-span-4 pb-[1rem] md:col-span-6"
+				hoverActiveScale={1.02}
+				hoverOpacity={0.9}
+				pressActiveScale={1}
+				zIndex={1}
+				pressable
+			>
+				<BlurShadow>
+					<Link link={highlight.link}>
+						<figure class="cursor-pointer">
+							<div class="rounded-lg pb-[1.25rem]">
+								{highlight.image && (
+									<SanityImage
+										{...highlight.image}
+										alt={highlight.title ?? ""}
+										width={1200}
+										class="h-auto w-full rounded-lg"
+										sizes="(min-width: 1280px) 1200px, 100vw"
+									/>
+								)}
+							</div>
+							<figcaption class="headline-card flex items-start gap-[0.5rem]">
+								<span class="flex h-[2.125rem] w-[2.125rem]">
+									<Icon icon="arrow_outward" />
+								</span>
+								{highlight.title}
+							</figcaption>
+						</figure>
+					</Link>
+				</BlurShadow>
+			</MagneticHover>
 		))
 	}
 </LandingLayout>
