feat: Highlight module lightbox

--- a/apps/web/src/components/astro/CaseCard.astro
+++ b/apps/web/src/components/astro/CaseCard.astro
@@ -50,7 +50,7 @@ const { heroImage, project, startDate, endDate } = Astro.props?.case ?? {};
 					{formatYear(endDate ?? undefined)}
 				</p>
 			</div>
-			<h2 class="headline-card pr-4">{title}</h2>
+			<h2 class="headline-card pe-4">{title}</h2>
 		</Link>
 	</MagneticHover>
 </div>
