--- a/apps/web/src/components/astro/SecondaryButton.astro
+++ b/apps/web/src/components/astro/SecondaryButton.astro
@@ -4,7 +4,7 @@ const { buttonText, link } = Astro.props;
 
 <button
 	type="button"
-	class="bg-novo-blue rounded-lg py-[0.875rem] pr-[1.5rem] pl-[1rem] text-[1.125rem] leading-[140%] font-medium tracking-[1%] text-white"
+	class="bg-novo-blue rounded-lg py-[0.875rem] ps-[1rem] pe-[1.5rem] text-[1.125rem] leading-[140%] font-medium tracking-[1%] text-white"
 >
 	<a class="flex items-center gap-[0.5rem]" href={link}>
 		<svg
