--- a/apps/web/src/components/astro/Footer.astro
+++ b/apps/web/src/components/astro/Footer.astro
@@ -14,7 +14,7 @@ const { footer } = Astro.props;
 	<div
 		class="mx-auto grid w-full max-w-[100rem] gap-[12.5rem] px-[1.5rem] py-[1.5rem] md:px-[3rem] md:pb-[2.5rem]"
 	>
-		<div class="flex items-start justify-between text-white">
+		<div class="flex flex-wrap items-start justify-between gap-8 text-white">
 			<div class="text-[2rem] leading-[90%] md:text-[4rem]">
 				<Icon icon="logo" class="aspect-[257/122] h-28" />
 			</div>
