--- a/apps/web/src/styles/global.css
+++ b/apps/web/src/styles/global.css
@@ -215,7 +215,7 @@ body {
 }
 
 .lottie-wrapper {
-	@apply border-1 border-transparent transition-shadow duration-400 ease-out hover:shadow-[0_0_0.75rem_oklch(from_#b2b7cd_l_c_h_/0.0),0_0_1.5rem_oklch(from_#b2b7cd_l_c_h_/0.0)];
+	@apply border-1 border-transparent transition-shadow duration-400 ease-out;
 	background:
 		linear-gradient(
 			to bottom,
@@ -224,8 +224,8 @@ body {
 		),
 		linear-gradient(
 			to bottom,
-			oklch(from #b2b7cd calc(l - 16%) calc(c + 0.04) h / 0.5) 0%,
-			oklch(from #b2b7cd calc(l - 24%) calc(c + 0.04) h / 0.5) 100%
+			oklch(from #b2b7cd calc(l - 0.16) calc(c + 0.04) h / 0.5) 0%,
+			oklch(from #b2b7cd calc(l - 0.24) calc(c + 0.04) h / 0.5) 100%
 		);
 	background-clip: padding-box, border-box;
 	background-origin: padding-box, border-box;
